# system-monitor

./: .gitignore  LICENSE  SPEC.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: _config.yml  index.html
scripts/: publish.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  main.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docker.rs  gpu.rs  groups.rs  lib.rs  main.rs  storage.rs
