[package]
name = "krill-system-monitor"
version = "0.1.0"
description = "A glanceable system-load hint for Linux"
authors = ["Filip"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "krill_system_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tokio = { version = "1", features = ["sync", "time", "rt"] }
walkdir = "2"
krill-desktop-core = { git = "https://github.com/krill-software/desktop-core", tag = "v0.2.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
